Maven/POM Implementation Updated README